--- a/bloc_library/bloc_library_sample/pubspec.yaml
+++ b/bloc_library/bloc_library_sample/pubspec.yaml
@@ -29,10 +29,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.4
+  bloc_test: ^9.1.7
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
+  mocktail: ^1.0.3
 
 dev_dependencies:
   flutter_lints: ^3.0.0
