--- a/mvvm/mvvm_samples/pubspec.yaml
+++ b/mvvm/mvvm_samples/pubspec.yaml
@@ -28,11 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  bilocator: ^0.6.1
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
-  mvvm_plus: ^1.5.4
+  flutter_riverpod: ^2.5.1
+  riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
